add classes and tests